# matsuzawa-20260121-2

./: pyproject.toml
.research/: research_history.json
.research/results/: stderr.txt  stdout.txt
config/: config.yaml
config/runs/: comparative-1-resnet18-cifar10.yaml  proposed-resnet18-cifar10.yaml
src/: evaluate.py  main.py  model.py  preprocess.py  train.py
